[tool.poetry]
name = "RAGScraper"
version = "11.5.2023"
description = "RAGScraper is a Python library designed for efficient and intelligent scraping of web documentation and content. Tailored for Retrieval-Augmented Generation systems, RAGScraper extracts and preprocesses text into structured, machine-learning-ready formats. It emphasizes precision, context preservation, and ease of integration with RAG models, making it an ideal tool for developers looking to enhance AI-driven applications with rich, web-sourced knowledge."
authors = ["kdcokenny <kenny@elapse.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rag_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
html2text = "^2020.1.16"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
rich = "^13.6.0"
black = "^23.10.1"
flake8 = "^6.1.0"
ruff = "^0.1.4"
isort = "^5.12.0"
pyright = "^1.1.334"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
